# ONLINEGAMBLE

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
backend/: .env.example  README.md  jest.config.ts  package.json  tsconfig.json
backend/src/: config.ts  index.ts
backend/src/idl/: battle_core.json  payout_vault.json
backend/src/lib/: id.ts  logger.ts  metrics.ts
backend/src/middleware/: complianceAuditTrail.ts  errorHandlers.ts  httpMetrics.ts
backend/src/routes/: compliance.ts  health.ts  matchmaking.ts  observability.ts
backend/src/services/: anchorClient.ts  complianceMonitoring.ts  matchmakingQueue.ts
backend/src/types/: shims.d.ts
contracts/: Anchor.toml
contracts/programs/battle_core/: Cargo.toml
contracts/programs/payout_vault/: Cargo.toml
contracts/programs/payout_vault/src/: lib.rs
contracts/tests/: README.md  battle-core.spec.ts
docs/: REPO_URL.txt  deployment-playbook.md  implementation-plan.md  matka-solana-guide.md  one-day-execution-plan.md  pumpfun-matka-plan.md  user-manual.md
frontend/: .env.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: Header.tsx  WalletProvider.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: usePhantomWallet.ts
infra/: OPS_INFRA_GUIDE.md  docker-compose.yaml
infra/github-actions/: ci.yml
infra/observability/: alerts.yaml  dashboards.yaml  prometheus.yml
infra/scripts/: deploy.sh
scripts/: bootstrap.sh
(+5 files in other folders)
